finished all features

--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,13 @@
         URL Shortener Microservice
       </h1>
       <p>
-        This API gives you a short URL from a long URL
+        This service gives you a short URL that redirects to a long URL.<br/> Just add /new/your_url in the address bar.
         <br/><br/>
         Try these different URLs:
       </p>
       <ul>
-        <li><a href="/3-10-2016">/3-10-2016</a></li>
-        <li><a href="/November 8, 2017">/November 8, 2017</a></li>
-        <li><a href="/1510272000000">/1510272000000 (Unix Timestamp)</a></li>
-        <li><a href="/Potatoes">/Potatoes</a></li> 
+        <li><a href="/new/https://www.freecodecamp.org/challenges/url-shortener-microservice">https://www.freecodecamp.org/challenges/url-shortener-microservice</a></li>
+        <li><a href="/new/https://en.wikipedia.org/wiki/Esperanto">https://en.wikipedia.org/wiki/Esperanto</a></li>
       </ul>
     </main>
     
